--- a/src/styles.css
+++ b/src/styles.css
@@ -1,4 +1,34 @@
+body {
+  background-image: linear-gradient(
+    to right,
+    rgb(218, 226, 99),
+    rgba(149, 179, 189, 0.6)
+  );
+  font-family: "Indie Flower", cursive;
+  margin: 1.2rem;
+}
 .App {
   font-family: sans-serif;
   text-align: center;
+}
+.non-bullets {
+  list-style: none;
+  display: flex;
+  flex-wrap: wrap;
+  padding-inline-start: 0;
+  justify-content: center;
+  background-color: rgb(0, 0, 0, 0.2);
+  border-radius: 1.5rem;
+  border: 2px solid black;
+  padding-top: 2%;
+  padding-bottom: 2%;
+}
+#output {
+  font-size: 1.5rem;
+  font-weight: bold;
+  padding: 1rem 0;
+  letter-spacing: 0.5rem;
+}
+a {
+  text-decoration: none;
 }
